<resources>
    <string name="app_name">Helpdesk Ticket App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_assigned">Assigned To Me</string>
    <string name="menu_closed">Closed</string>
    <string name="menu_deleted">Deleted</string>
    <string name="menu_active">All Active</string>
    <string name="menu_logout">Logout</string>
    <string name="home_second">Home Second</string>
    <string name="customer_name">Customer Name</string>
    <string name="just_now">just now</string>
    <string name="city">City</string>
    <string name="mobile">Mobile</string>
    <string name="hi_i_have_a_technical_query">Hi, I have a technical query.</string>
    <string name="this_is_tag">This is tag</string>
    <string name="add_a_note">Add a note</string>
    <string name="todo">TODO</string>
    <string name="write_a_message">Write a message</string>
    <string name="write_message">Write message</string>
    <string name="add_note">Add Note</string>
    <string name="close_ticket">Close Ticket</string>
    <string name="delete_ticket">Delete Ticket</string>
    <string name="assign_ticket">Assign Ticket</string>
    <string name="assign_ticket_self">Assign Ticket to Self</string>
    <string name="note_msg">Placeholder message\n This is my outgoing note.</string>
    <string name="outgoing_message">Placeholder message\n This is my outgoing message.</string>
    <string name="incoming_msg">How are you doing? This is a long message that should probably wrap.</string>
    <string name="ticket_id">#0000</string>
    <string name="user_mobile">Mobile</string>
    <string name="user_password">Password</string>
    <string name="txt_help">Help?</string>
    <string name="log_in">Log In</string>
    <string name="assign_to_me">Assign to Me</string>
    <string name="assign_to_activation">Activation</string>
    <string name="assign_to_technical">Technical</string>
    <string name="assign_to_online">Online</string>
    <string name="assign_to_dealer">Dealer</string>
    <string name="assign_to_corporate">Corporate</string>
    <string name="assign_to_sales">Sales</string>
    <string name="assign_ticket_to_department">Assign Ticket to Department</string>
    <string name="add_tags">Add Tags</string>
    <string name="save">SAVE</string>
    <string name="add_tags_here_eg_tag1_tag2">Add Tags here...(eg. tag1, tag2)</string>
    <string name="assign_msg">Ticket #8 has been re-assigned from agent #Test Agent to agent #Test Agent.</string>
    <string name="txt_name">Chetan Patil</string>
    <string name="btn_close">Close</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="version_1_1">Version 1.1</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="disconnected_reconnecting">Disconnected. Reconnecting...</string>
</resources>