<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/assign_ticket_self"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_assignToMe"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_me"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/assign_ticket_to_department"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_technical"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_technical"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_activation"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_activation"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_online"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_online"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_dealer"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_dealer"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_corporate"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_corporate"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txt_sales"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background"
        android:gravity="center"
        android:text="@string/assign_to_sales"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCloseAssignDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/todo"
        android:text="@string/btn_close"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>