<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.npav.npavhelpdeskticket.fragment.AssignedTicketFragment"
        android:label="@string/menu_assigned"
        android:tag="nav_assigned"
        tools:layout="@layout/fragment_assigned_ticket">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.npav.npavhelpdeskticket.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.npav.npavhelpdeskticket.fragment.ClosedTicketFragment"
        android:label="@string/menu_closed"
        android:tag="nav_closed"
        tools:layout="@layout/fragment_closed_ticket" />

    <fragment
        android:id="@+id/nav_deleted"
        android:name="com.npav.npavhelpdeskticket.fragment.DeletedTicketFragment"
        android:label="@string/menu_deleted"
        android:tag="nav_deleted"
        tools:layout="@layout/fragment_deleted_ticket" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.npav.npavhelpdeskticket.fragment.ActiveTicketFragment"
        android:label="@string/menu_active"
        android:tag="nav_all_active"
        tools:layout="@layout/fragment_active_ticket" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.npav.npavhelpdeskticket.fragment.LogoutFragment"
        android:label="@string/menu_logout"
        android:tag="nav_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>