<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center|center_horizontal"
        android:text="@string/add_tags"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editTextTag"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/add_tags_here_eg_tag1_tag2"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:minLines="2"
        android:paddingHorizontal="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/todo"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:contentDescription="@string/todo"
            android:text="@string/btn_close"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>