<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:elevation="10dp"
    card_view:cardCornerRadius="10dp"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10">
        <!--column 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ticket_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/ticket_id"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ticket_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_whatsapp"
                android:textAlignment="center" />


        </LinearLayout>
        <!--column 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4.9"
            android:orientation="vertical">

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="-3dp"
                android:background="@color/gray500" />

        </LinearLayout>

        <!--column 3-->
        <LinearLayout
            android:id="@+id/parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lay_row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cust_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/customer_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_ago"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text="@string/just_now"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cust_mobile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mobile"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cust_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_row4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/message_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/hi_i_have_a_technical_query"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_row5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/tag_background"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/this_is_tag"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_tag_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/tag_background"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/this_is_tag"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_tag_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/tag_background"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/this_is_tag"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_tag_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/tag_background"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/this_is_tag"
                    android:textSize="14sp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>