<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    android:clipToPadding="false"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.TicketChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:divider="#fff" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/layout_write_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#fff"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPostMessage"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/write_a_message"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:text="" />

        <ImageButton
            android:id="@+id/imgBtnSendMsg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_send_black_24dp"
            android:contentDescription="@string/todo"
            android:padding="40dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_add_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#fff"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/editTextAddNote"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="2"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/add_a_note"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:text="" />

        <ImageButton
            android:id="@+id/imgBtnSendNote"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_pencil"
            android:contentDescription="@string/todo"
            android:padding="40dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

</LinearLayout>
